--- a/src/styles/_Header.scss
+++ b/src/styles/_Header.scss
@@ -1,8 +1,15 @@
+header{
+    margin-bottom: 46px;
+
+    hr {
+        border: 1px solid #EAEAEA;
+    }
+}
 .shopHeader {
+    padding: 43px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-
 
     &__info {
         display: flex;
@@ -17,12 +24,12 @@
         flex-direction: column;
     }
 
-
     ul {
         list-style: none;
         display: flex;
         align-items: center;
         column-gap: 32px;
+
         li{
             display: flex;
             justify-content: center;
@@ -30,5 +37,4 @@
             gap: 9px;
         }
     }
-
 }
