--- a/src/index.scss
+++ b/src/index.scss
@@ -1,20 +1,21 @@
 @import "styles/mixins";
 
 * {
-    @include clear();
-    font-family: Inter, sans-serif;
-}
+        @include clear();
+        font-family: Inter, sans-serif;
+    }
 
-body{
-    background-color: #E7F6FF;
+    body{
+        background-color: #E7F6FF;
 }
 
 .wrapper{
     width: calc(100% - 60px);
-    margin: 30px;
+    height: 100vh;
+    margin: 30px 30px 0 30px;
     background: #FFFFFF;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.04);
-    border-radius: 20px;
+    border-radius: 20px 20px 0 0;
 }
 
 main{
@@ -27,7 +28,21 @@ main{
 
 .content{
     display: grid;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(8, 1fr);
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+
+    @media (max-width: 1920px) {
+        grid-template-columns: repeat(6, 1fr);
+    }
+
+    @media (max-width: 1024px) {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    @media (max-width: 430px) {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 
 @import "styles/Header";
