--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,6 @@
 
 .wrapper{
     width: calc(100% - 60px);
-    height: 100vh;
     margin: 30px 30px 0 30px;
     background: #FFFFFF;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.04);
@@ -26,6 +25,11 @@ main{
     display: flex;
     justify-content: space-between;
     margin-bottom: 40px;
+
+    @media (max-width: 700px) {
+        flex-direction: column;
+        row-gap: 20px;
+    }
 
     h2 {
         font-size: 32px;
@@ -76,21 +80,11 @@ main{
 
 .content{
     display: grid;
-    grid-template-columns: repeat(8, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
     grid-column-gap: 20px;
     grid-row-gap: 20px;
 
-    @media (max-width: 1920px) {
-        grid-template-columns: repeat(6, 1fr);
-    }
 
-    @media (max-width: 1024px) {
-        grid-template-columns: repeat(3, 1fr);
-    }
-
-    @media (max-width: 430px) {
-        grid-template-columns: repeat(1, 1fr);
-    }
 }
 
 
