--- a/src/Components/Cart/_cart.scss
+++ b/src/Components/Cart/_cart.scss
@@ -6,28 +6,29 @@
     height: 100%;
     background-color: rgb(0, 0, 0, 0.3);
     z-index: 1;
+    visibility: hidden;
+
+    &.open{
+        visibility: visible;
+    }
 }
 
 .cartBar{
-    position: absolute;
+    position: fixed;
     width: 385px;
     height: 100vh;
     top: 0;
-    right: 0;
+    right: -385px;
     display: flex;
     flex-direction: column;
     row-gap: 30px;
     padding: 30px;
-
     background: #FFFFFF;
     box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
+    transition: right 0.3s ease-in-out;
 
-    .cartItems{
-        overflow: auto;
-        display: flex;
-        flex-direction: column;
-        row-gap: 20px;
-        flex: 1;
+    &.open{
+        right: 0;
     }
 
     ul{
@@ -49,39 +50,52 @@
             }
         }
     }
-    .orderBtn{
-        width: 100%;
-        height: 55px;
-        outline: none;
-        border: none;
-        background: #9DD558;
-        border-radius: 18px;
-        position: relative;
-        font-size: 16px;
-        font-weight: 600;
-        padding: 18px;
-        color: #FFFFFF;
-        cursor: pointer;
+}
+.empty{
+    width: calc(100% - 385px);
+    height: 100%;
+}
+
+.cartItems{
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+    flex: 1;
+}
+
+.orderBtn{
+    width: 100%;
+    height: 55px;
+    outline: none;
+    border: none;
+    background: #9DD558;
+    border-radius: 18px;
+    position: relative;
+    font-size: 16px;
+    font-weight: 600;
+    padding: 18px;
+    color: #FFFFFF;
+    cursor: pointer;
+
+    svg{
+        position: absolute;
+        right: 40px;
+        bottom: 20px;
+        transition: transform 0.3s ease-in-out;
+    }
+
+    &:hover{
+        background-color: lighten(#9DD558, 4%);
 
         svg{
-            position: absolute;
-            right: 40px;
-            bottom: 20px;
-            transition: transform 0.3s ease-in-out;
+            transform: translateX(10px);
         }
-
-        &:hover{
-            background-color: lighten(#9DD558, 4%);
-
-            svg{
-                transform: translateX(10px);
-            }
-        }
-
-        &:active{
-            background-color: darken(#9DD558, 4%);
-        }
-
     }
+
+    &:active{
+        background-color: darken(#9DD558, 4%);
+    }
+
 }
 
