--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,6 @@ body {
 
 .wrapper {
   width: calc(100% - 60px);
-  height: 100vh;
   margin: 30px 30px 0 30px;
   background: #FFFFFF;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.04);
@@ -46,6 +45,12 @@ main {
   display: flex;
   justify-content: space-between;
   margin-bottom: 40px;
+}
+@media (max-width: 700px) {
+  .contentInfo {
+    flex-direction: column;
+    row-gap: 20px;
+  }
 }
 .contentInfo h2 {
   font-size: 32px;
@@ -85,24 +90,9 @@ main {
 
 .content {
   display: grid;
-  grid-template-columns: repeat(8, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
   grid-column-gap: 20px;
   grid-row-gap: 20px;
-}
-@media (max-width: 1920px) {
-  .content {
-    grid-template-columns: repeat(6, 1fr);
-  }
-}
-@media (max-width: 1024px) {
-  .content {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-@media (max-width: 430px) {
-  .content {
-    grid-template-columns: repeat(1, 1fr);
-  }
 }
 
 header {
@@ -119,9 +109,11 @@ header hr {
   align-items: center;
   cursor: default;
 }
-@media (max-width: 430px) {
+@media (max-width: 730px) {
   .shopHeader {
     flex-direction: column;
+    align-items: normal;
+    row-gap: 30px;
   }
 }
 .shopHeader__info {
@@ -141,6 +133,13 @@ header hr {
   display: flex;
   align-items: center;
   column-gap: 32px;
+}
+@media (max-width: 500px) {
+  .shopHeader ul {
+    flex-direction: column;
+    row-gap: 20px;
+    align-items: flex-start;
+  }
 }
 .shopHeader ul li {
   display: flex;
@@ -231,26 +230,28 @@ header hr {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.3);
   z-index: 1;
+  visibility: hidden;
+}
+.overlay.open {
+  visibility: visible;
 }
 
 .cartBar {
-  position: absolute;
+  position: fixed;
   width: 385px;
   height: 100vh;
   top: 0;
-  right: 0;
+  right: -385px;
   display: flex;
   flex-direction: column;
   row-gap: 30px;
   padding: 30px;
   background: #FFFFFF;
   box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
+  transition: right 0.3s ease-in-out;
 }
-.cartBar .cartItems {
-  display: flex;
-  flex-direction: column;
-  row-gap: 20px;
-  flex: 1;
+.cartBar.open {
+  right: 0;
 }
 .cartBar ul {
   list-style: none;
@@ -269,7 +270,21 @@ header hr {
   height: 1px;
   border: 1px dashed #DFDFDF;
 }
-.cartBar .orderBtn {
+
+.empty {
+  width: calc(100% - 385px);
+  height: 100%;
+}
+
+.cartItems {
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  flex: 1;
+}
+
+.orderBtn {
   width: 100%;
   height: 55px;
   outline: none;
@@ -283,19 +298,19 @@ header hr {
   color: #FFFFFF;
   cursor: pointer;
 }
-.cartBar .orderBtn svg {
+.orderBtn svg {
   position: absolute;
   right: 40px;
   bottom: 20px;
   transition: transform 0.3s ease-in-out;
 }
-.cartBar .orderBtn:hover {
+.orderBtn:hover {
   background-color: #a7d968;
 }
-.cartBar .orderBtn:hover svg {
+.orderBtn:hover svg {
   transform: translateX(10px);
 }
-.cartBar .orderBtn:active {
+.orderBtn:active {
   background-color: #93d148;
 }
 
