--- a/src/index.css
+++ b/src/index.css
@@ -102,6 +102,10 @@ header hr {
   border: 1px solid #EAEAEA;
 }
 
+a {
+  text-decoration: none;
+}
+
 .shopHeader {
   padding: 43px;
   display: flex;
@@ -127,6 +131,10 @@ header hr {
 .shopHeader__titles {
   display: flex;
   flex-direction: column;
+  color: #000000;
+}
+.shopHeader__titles p {
+  opacity: 0.7;
 }
 .shopHeader ul {
   list-style: none;
