--- a/src/Components/Header/_Header.scss
+++ b/src/Components/Header/_Header.scss
@@ -55,14 +55,36 @@ a{
             align-items: flex-start;
         }
 
-        li{
+        a{
             display: flex;
             justify-content: center;
             align-items: center;
             gap: 9px;
+            cursor: pointer;
 
-            svg{
-                cursor: pointer;
+            p {
+                color: #5C5C5C;
+                position: relative;
+
+                &::after {
+                    content: "";
+                    position: absolute;
+                    bottom: -2px;
+                    left: 0;
+                    width: 100%;
+                    height: 2px;
+                    background-color: #5C5C5C;
+                    transform-origin: bottom right;
+                    transform: scaleX(0);
+                    transition: transform 0.3s ease-in-out;
+                }
+
+                &:hover {
+                    &::after{
+                        transform-origin: bottom left;
+                        transform: scaleX(1);
+                    }
+                }
             }
         }
     }
