--- a/src/index.css
+++ b/src/index.css
@@ -149,14 +149,32 @@ a {
     align-items: flex-start;
   }
 }
-.shopHeader ul li {
+.shopHeader ul a {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 9px;
-}
-.shopHeader ul li svg {
   cursor: pointer;
+}
+.shopHeader ul a p {
+  color: #5C5C5C;
+  position: relative;
+}
+.shopHeader ul a p::after {
+  content: "";
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #5C5C5C;
+  transform-origin: bottom right;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
+}
+.shopHeader ul a p:hover::after {
+  transform-origin: bottom left;
+  transform: scaleX(1);
 }
 
 .card {
