import infoCard stylesheet

--- a/src/index.scss
+++ b/src/index.scss
@@ -92,3 +92,4 @@ main{
 @import "Components/SneakerCard/SneakerCard";
 @import "Components/Cart/cart";
 @import "Components/CartItem/cartItem";
+@import "Components/InfoCard/infoCard";
