--- a/src/index.scss
+++ b/src/index.scss
@@ -1,16 +1,17 @@
 @import "styles/mixins";
 
 * {
-        @include clear();
-        font-family: Inter, sans-serif;
-    }
+    @include clear();
+    font-family: Inter, sans-serif;
+}
 
-    body{
-        background-color: #E7F6FF;
+body{
+    background-color: #E7F6FF;
 }
 
 .wrapper{
     width: calc(100% - 60px);
+    height: calc(100vh - 30px);
     margin: 30px 30px 0 30px;
     background: #FFFFFF;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.04);
@@ -84,8 +85,3 @@ main{
     grid-column-gap: 20px;
     grid-row-gap: 20px;
 }
-
-
-
-@import "Pages/Home/home";
-@import "Pages/Favorite/favorite";
