delete old files

--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ body {
 
 .wrapper {
   width: calc(100% - 60px);
+  height: calc(100vh - 30px);
   margin: 30px 30px 0 30px;
   background: #FFFFFF;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.04);
@@ -93,356 +94,6 @@ main {
   grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
   grid-column-gap: 20px;
   grid-row-gap: 20px;
-}
-
-header {
-  margin-bottom: 46px;
-}
-header hr {
-  border: 1px solid #EAEAEA;
-}
-
-a {
-  text-decoration: none;
-}
-
-.shopHeader {
-  padding: 43px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  cursor: default;
-}
-@media (max-width: 730px) {
-  .shopHeader {
-    flex-direction: column;
-    align-items: normal;
-    row-gap: 30px;
-  }
-}
-.shopHeader__info {
-  display: flex;
-  padding: 10px;
-  cursor: pointer;
-}
-.shopHeader__info img {
-  margin-right: 10px;
-}
-.shopHeader__titles {
-  display: flex;
-  flex-direction: column;
-  color: #000000;
-}
-.shopHeader__titles p {
-  opacity: 0.7;
-}
-.shopHeader ul {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  column-gap: 32px;
-}
-@media (max-width: 500px) {
-  .shopHeader ul {
-    flex-direction: column;
-    row-gap: 20px;
-    align-items: flex-start;
-  }
-}
-.shopHeader ul a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 9px;
-  cursor: pointer;
-}
-.shopHeader ul a p {
-  color: #5C5C5C;
-  position: relative;
-}
-.shopHeader ul a p::after {
-  content: "";
-  position: absolute;
-  bottom: -2px;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  background-color: #5C5C5C;
-  transform-origin: bottom right;
-  transform: scaleX(0);
-  transition: transform 0.3s ease-in-out;
-}
-.shopHeader ul a p:hover::after {
-  transform-origin: bottom left;
-  transform: scaleX(1);
-}
-
-.card {
-  width: 210px;
-  height: 260px;
-  background: #FFFFFF;
-  border: 1px solid #F3F3F3;
-  border-radius: 40px;
-  position: relative;
-  padding: 20px 29px 34px 30px;
-  transition: transform 0.2s ease-in-out;
-}
-.card:hover {
-  background: #FFFFFF;
-  border: 1px solid #F8F8F8;
-  box-shadow: 0 14px 30px rgba(0, 0, 0, 0.05);
-  border-radius: 40px;
-  transform: translateY(-10px);
-}
-.card img {
-  width: 133px;
-  margin-bottom: 14px;
-}
-.card p,
-.card b {
-  font-size: 14px;
-}
-.card p {
-  margin-bottom: 14px;
-}
-.card span {
-  font-size: 11px;
-}
-.card button {
-  width: 32px;
-  height: 32px;
-  border-radius: 8px;
-  outline: none;
-  border: none;
-  cursor: pointer;
-}
-.card .favorite {
-  position: absolute;
-  border-radius: 7px;
-}
-.card .favorite svg {
-  transition: all 0.5s ease-in-out;
-  fill: #FFFFFF;
-}
-.card .favorite svg rect {
-  fill: #FFFFFF;
-}
-.card .favorite svg:hover {
-  fill: #fdb7b7;
-}
-.card .favorite svg:hover rect {
-  fill: #FEF0F0;
-  stroke: #FFFFFF;
-}
-.card .favorite svg:hover path {
-  stroke: none;
-}
-.card .favorite.active svg {
-  fill: #FF8585;
-}
-.card .favorite.active svg rect {
-  fill: #FEF0F0;
-  stroke: #FFFFFF;
-}
-.card .favorite.active svg path {
-  stroke: none;
-}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
-  z-index: 1;
-  visibility: hidden;
-}
-.overlay.open {
-  visibility: visible;
-}
-
-.cartBar {
-  position: fixed;
-  width: 385px;
-  height: 100vh;
-  top: 0;
-  right: -385px;
-  display: flex;
-  flex-direction: column;
-  row-gap: 30px;
-  padding: 30px;
-  background: #FFFFFF;
-  box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
-  transition: right 0.3s ease-in-out;
-}
-.cartBar.open {
-  right: 0;
-}
-.cartBar ul {
-  list-style: none;
-  margin-bottom: 24px;
-}
-.cartBar ul li {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 19px;
-}
-.cartBar ul li hr {
-  position: relative;
-  content: "";
-  bottom: -16px;
-  flex: 1;
-  height: 1px;
-  border: 1px dashed #DFDFDF;
-}
-
-.empty {
-  width: calc(100% - 385px);
-  height: 100%;
-}
-
-.cartItems {
-  overflow: auto;
-  display: flex;
-  flex-direction: column;
-  row-gap: 20px;
-  flex: 1;
-}
-
-.orderBtn {
-  width: 100%;
-  height: 55px;
-  outline: none;
-  border: none;
-  background: #9DD558;
-  border-radius: 18px;
-  position: relative;
-  font-size: 16px;
-  font-weight: 600;
-  padding: 18px;
-  color: #FFFFFF;
-  cursor: pointer;
-}
-.orderBtn svg {
-  position: absolute;
-  right: 40px;
-  bottom: 20px;
-  transition: transform 0.3s ease-in-out;
-}
-.orderBtn:hover {
-  background-color: #a7d968;
-}
-.orderBtn:hover svg {
-  transform: translateX(10px);
-}
-.orderBtn:active {
-  background-color: #93d148;
-}
-
-.cartItem {
-  position: relative;
-  display: flex;
-  align-items: flex-end;
-  padding: 20px;
-  background: #FFFFFF;
-  border: 1px solid #e4e4e4;
-  border-radius: 20px;
-  transition: box-shadow 0.3s ease-in-out;
-}
-.cartItem:hover {
-  box-shadow: 14px 0 30px rgba(0, 0, 0, 0.1);
-}
-.cartItem img {
-  width: 70px;
-  height: 70px;
-  margin-right: 21px;
-}
-.cartItem h3, .cartItem b {
-  font-size: 14px;
-}
-.cartItem h3 {
-  font-weight: 400;
-  margin-bottom: 8px;
-}
-.cartItem button {
-  position: absolute;
-  bottom: 21px;
-  right: 20px;
-  width: 32px;
-  height: 32px;
-  border-radius: 8px;
-  border: none;
-  outline: none;
-  cursor: pointer;
-}
-.cartItem button svg rect {
-  transition: all 0.3s ease-in-out;
-}
-.cartItem button svg:hover rect {
-  fill: #fa6c6c;
-  stroke: white;
-}
-.cartItem button svg:hover path {
-  fill: #E7F6FF;
-}
-
-.infoCard {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 285px;
-  align-self: center;
-  transform: translateY(80%);
-}
-.infoCard img {
-  margin-bottom: 21px;
-}
-.infoCard h2 {
-  font-size: 22px;
-  margin-bottom: 9px;
-}
-.infoCard p {
-  text-align: center;
-  font-size: 16px;
-  opacity: 0.4;
-  margin-bottom: 40px;
-}
-.infoCard button {
-  width: 245px;
-  height: 55px;
-  outline: none;
-  border: none;
-  background: #9DD458;
-  border-radius: 18px;
-  position: relative;
-  padding: 17px 0 19px 0;
-  font-size: 16px;
-  color: #FFFFFF;
-}
-.infoCard button svg {
-  position: absolute;
-  top: 21px;
-  left: 40px;
-  transform: rotatey(180deg);
-  transition: left 0.3s ease-in-out;
-}
-.infoCard button:hover {
-  background-color: #a7d968;
-}
-.infoCard button:hover svg {
-  left: 25px;
-}
-.infoCard button:active {
-  background-color: #93d148;
-}
-
-.contentInfo button {
-  border: none;
-  outline: none;
-  width: 35px;
-  height: 35px;
-  border-radius: 8px;
 }
 
 /*# sourceMappingURL=index.css.map */
