--- a/src/index.css
+++ b/src/index.css
@@ -30,9 +30,9 @@ body {
 }
 
 .wrapper {
-  width: calc(100% - 60px);
-  height: calc(100vh - 30px);
-  margin: 30px 30px 0 30px;
+  width: calc(100% - 12vw);
+  height: 94vh;
+  margin: 6vh 6vw 0 6vw;
   background: #FFFFFF;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.04);
   border-radius: 20px 20px 0 0;
@@ -40,60 +40,6 @@ body {
 
 main {
   padding: 0 60px;
-}
-
-.contentInfo {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 40px;
-}
-@media (max-width: 700px) {
-  .contentInfo {
-    flex-direction: column;
-    row-gap: 20px;
-  }
-}
-.contentInfo h2 {
-  font-size: 32px;
-}
-.contentInfo .searcher {
-  position: relative;
-}
-.contentInfo .searcher svg {
-  position: absolute;
-  top: 15px;
-  left: 18px;
-  opacity: 1;
-  transition: opacity 0.5s ease-in-out;
-}
-.contentInfo .searcher input {
-  width: 250px;
-  height: 45px;
-  padding: 13px 10px 15px 46px;
-  border: 1px solid #F3F3F3;
-  border-radius: 10px;
-  font-size: 14px;
-  transition: padding-left 0.4s ease-in-out;
-}
-.contentInfo .searcher input:focus {
-  outline: none;
-  border: 1px solid #e3e3e3;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
-}
-.contentInfo .searcher:hover svg {
-  visibility: hidden;
-  opacity: 0;
-}
-.contentInfo .searcher:hover input {
-  padding-left: 18px;
-  box-shadow: 0 14px 30px rgba(0, 0, 0, 0.05);
-}
-
-.content {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
-  grid-column-gap: 20px;
-  grid-row-gap: 20px;
 }
 
 /*# sourceMappingURL=index.css.map */
