--- a/src/Pages/_pages.module.scss
+++ b/src/Pages/_pages.module.scss
@@ -12,6 +12,28 @@
         border-radius:8px;
         cursor: pointer;
         margin-right: 21px;
+
+
+        svg{
+            rect{
+                transition: fill 0.3s ease-in-out;
+            }
+            path{
+                transition: all 0.3s ease-in-out;
+            }
+        }
+
+        &:hover{
+            svg{
+                rect{
+                    fill: #dddddd;
+                }
+                path{
+                    stroke: #FFFFFF;
+                    transform: translateX(-3px);
+                }
+            }
+        }
     }
 }
 
