--- a/src/Components/SneakerCard/_sneakerCard.module.scss
+++ b/src/Components/SneakerCard/_sneakerCard.module.scss
@@ -43,41 +43,74 @@
         border: none;
         cursor: pointer;
     }
+}
 
-    .favorite{
-        position: absolute;
-        border-radius: 7px;
+.favorite{
+    position: absolute;
+    border-radius: 7px;
 
-        svg{
-            transition: all 0.5s ease-in-out;
+    svg{
+        transition: all 0.5s ease-in-out;
+        fill: #FFFFFF;
+        rect{
             fill: #FFFFFF;
-            rect{
-                fill: #FFFFFF;
-            }
-
-            &:hover{
-                fill: #fdb7b7;
-                rect{
-                    fill: #FEF0F0;
-                    stroke: #FFFFFF;
-                }
-                path{
-                    stroke: none;
-                }
-            }
         }
 
-        &.active{
-            svg{
-                fill: #FF8585;
-                rect{
-                    fill: #FEF0F0;
-                    stroke: #FFFFFF;
-                }
-                path{
-                    stroke: none;
-                }
+        &:hover{
+            fill: #fdb7b7;
+            rect{
+                fill: #FEF0F0;
+                stroke: #FFFFFF;
             }
+            path{
+                stroke: none;
+            }
+        }
+    }
+
+    &.active{
+        svg{
+            fill: #FF8585;
+            rect{
+                fill: #FEF0F0;
+                stroke: #FFFFFF;
+            }
+            path{
+                stroke: none;
+            }
+        }
+    }
+}
+
+.removeBtn, .addBtn{
+    svg, rect, path{
+        transition: all 0.3s ease-in-out;
+    }
+}
+
+.addBtn{
+    &:hover{
+        svg{
+            opacity: 0.6;
+        }
+        rect {
+            fill: #89F09C;
+            stroke: #FFFFFF;
+        }
+        path{
+            fill: #FFFFFF;
+        }
+    }
+}
+
+.removeBtn{
+    &:hover{
+        svg{
+            opacity: 0.6;
+        }
+        rect {
+            fill: #89F09C;
+            stroke: #FFFFFF;
         }
     }
 }
