--- a/src/Pages/_pages.module.scss
+++ b/src/Pages/_pages.module.scss
@@ -16,7 +16,7 @@
 
         svg{
             rect, path{
-                transition: fill 0.3s ease-in-out;
+                transition: all 0.3s ease-in-out;
             }
         }
 
