--- a/src/Components/Header/_header.module.scss
+++ b/src/Components/Header/_header.module.scss
@@ -66,7 +66,19 @@ a{
                 color: #5C5C5C;
                 position: relative;
 
-                &::after {
+                &.active{
+                    &::after{
+                        content: "";
+                        position: absolute;
+                        bottom: -2px;
+                        left: 0;
+                        width: 100%;
+                        height: 2px;
+                        background-color: #5C5C5C;
+                    }
+                }
+
+                &:not(.active)::after {
                     content: "";
                     position: absolute;
                     bottom: -2px;
@@ -79,7 +91,7 @@ a{
                     transition: transform 0.3s ease-in-out;
                 }
 
-                &:hover {
+                &:not(.active):hover {
                     &::after{
                         transform-origin: bottom left;
                         transform: scaleX(1);
