fix styles for home page list items

--- a/src/Components/Header/_header.module.scss
+++ b/src/Components/Header/_header.module.scss
@@ -55,7 +55,7 @@ a{
             align-items: flex-start;
         }
 
-        a{
+        a,li {
             display: flex;
             justify-content: center;
             align-items: center;
