change color of button

--- a/src/Pages/_pages.module.scss
+++ b/src/Pages/_pages.module.scss
@@ -23,7 +23,8 @@
         &:hover{
             svg{
                 rect{
-                    fill: #dddddd;
+                    fill: #FCB858;
+                    stroke: #FCB858;
                 }
                 path{
                     stroke: #FFFFFF;
