--- a/src/Components/InfoCard/_infoCard.module.scss
+++ b/src/Components/InfoCard/_infoCard.module.scss
@@ -13,7 +13,7 @@
         font-size: 22px;
         margin-bottom: 9px;
     }
-    p{
+    pre{
         text-align: center;
         font-size: 16px;
         opacity: 0.4;
