--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,7 @@ body{
 
 .wrapper{
     width: calc(100% - 12vw);
-    height: calc(100vh - 6vh);
+    min-height: 100vh;
     margin: 6vh 6vw 0 6vw;
     background: #FFFFFF;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.04);
