--- a/src/Components/Cart/_cart.module.scss
+++ b/src/Components/Cart/_cart.module.scss
@@ -38,7 +38,8 @@
 }
 
 .cartItems{
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     row-gap: 20px;
