--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ body {
 
 .wrapper {
   width: calc(100% - 12vw);
-  height: 94vh;
+  min-height: 100vh;
   margin: 6vh 6vw 0 6vw;
   background: #FFFFFF;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.04);
