--- a/src/Components/Cart/_cart.module.scss
+++ b/src/Components/Cart/_cart.module.scss
@@ -4,12 +4,13 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(0, 0, 0, 0.3);
     z-index: 1;
     visibility: hidden;
+    transition: all 0.3s cubic-bezier(0.09, 0.54, 0.61, 0.96);
 
     &.open{
         visibility: visible;
+        background-color: rgb(0, 0, 0, 0.3);
     }
 }
 
@@ -25,7 +26,7 @@
     padding: 30px;
     background: #FFFFFF;
     box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
-    transition: right 0.3s ease-in-out;
+    transition: right 0.4s cubic-bezier(0.09, 0.54, 0.61, 0.96);
 
     &.open{
         right: 0;
